# external-ts-example

./: .bazelrc  BUILD  MODULE.bazel  aspect_rules_ts.patch  test.ts  tsconfig.json
